--- a/src/components/Mainpage.css
+++ b/src/components/Mainpage.css
@@ -67,17 +67,26 @@
     align-items: center;
     
 }
-
+.que_image{
+    padding-left: 10px;
+    display: flex;
+    justify-content: initial;
+    text-align: center;
+    
+}
 .btn{
+    /* position: relative; */
     color: #1D39C4;
     background-color: transparent;
     color: #000;
-    border: 2px solid #000;
-    padding: 8px 16px;
+    border: 1.5px solid #000;
+    display: flex;
+    padding: 10px 10px;
     font-size: 1rem;
     justify-content: center;
+    align-items: center;
     text-align: center;
-    text-decoration: none;
+    /* text-decoration: none; */
     transition: background-color 0.3s ease-in-out;
 }
 
@@ -135,6 +144,13 @@
     justify-content: center;
     
   }
+
+  .drag_image{
+    padding: 0% ;
+    margin-left: auto;
+    
+  }
+  
  
 
 
