--- a/src/components/Mainpage.css
+++ b/src/components/Mainpage.css
@@ -92,25 +92,30 @@
 
 
 .surveyTitleDate{
+    margin-left: 10px;
+    margin-right: 10px;
     display: flex;
+    justify-content: space-between;
+    margin-top: 8px;
 }
 
 .inputField {
-    width: 100%;
-    height: 15px;
-    padding: 10px;
-    margin-top: 5px;
-    margin: 17px 7px 7px 7px;
-    border-radius: 5px;
-    border: 1px solid #aaa;
+  width: 49%;
+  
   }
+  .inputField-date{
+  width: 49%;
+  
+  
+  }
+
 
 
   .dropableContainer{
     background-color: #ffffff;
     padding: 11px 0px 11px 17px;
-    margin: 20px;
-    border-radius: 5px;
+    /* margin: 20px; */
+    /* border-radius: 5px; */
     margin-top: 0%;
     padding-bottom: 20px;
   }
@@ -125,23 +130,24 @@
 }
 .button4 {
     border-radius: 4px;
-    display: flex;
+    /* display: flex; */
     padding: 10px 24px;
-    justify-content: center;
+    /* justify-content: center; */
     background-color: #131ca2;
     color: #fff;
-    flex-direction: row;
-    align-items: center;
+    /* flex-direction: row; */
+    /* align-items: center; */
     
   }
   .button3 {
     border: 1px solid #131ca2;
-    flex-direction: row;
-    align-items: center;
-    border-radius: 4px;
-    display: flex;
+    /* flex-direction: row; */
+    /* align-items: center; */
+    /* border-radius: 4px; */
+    /* display: flex; */
     padding: 10px 24px;
     justify-content: center;
+  
     
   }
 
@@ -150,7 +156,16 @@
     margin-left: auto;
     
   }
-  
+  .button{
+    padding-left: 0%;
+    margin-left: 0%;
+    display: flex;
+    margin: auto;
+  }
+  /* .textfield {
+    background-color: #000;
+    color: green;
+} */
  
 
 
